cluster/apps/omada-controller/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: omada-controller
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
