cluster/apps/omada-controller/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: omada-ui
  namespace: omada-controller
spec:
  selector:
    app: omada-controller
  ports:
    - name: web-http
      port: 8088
      targetPort: web-http
    - name: web-https
      port: 8043
      targetPort: web-https
---
apiVersion: v1
kind: Service
metadata:
  name: omada-controller-tcp
  namespace: omada-controller
  annotations:
    metallb.universe.tf/allow-shared-ip: OMADA
spec:
  type: LoadBalancer
  loadBalancerIP: ${OMADA_CONTROLLER_IP}
  selector:
    app: omada-controller
  ports:
    - name: 29810-tcp
      port: 29810
      protocol: TCP
      targetPort: 29810
    - name: 29811-tcp
      port: 29811
      protocol: TCP
      targetPort: 29811
    - name: 29812-tcp
      port: 29812
      protocol: TCP
      targetPort: 29812
    - name: 29813-tcp
      port: 29813
      protocol: TCP
      targetPort: 29813
    - name: 29814-tcp
      port: 29814
      protocol: TCP
      targetPort: 29814
---
apiVersion: v1
kind: Service
metadata:
  name: omada-controller-udp
  namespace: omada-controller
  annotations:
    metallb.universe.tf/allow-shared-ip: OMADA
spec:
  type: LoadBalancer
  loadBalancerIP: ${OMADA_CONTROLLER_IP}
  selector:
    app: omada-controller
  ports:
    - name: 29810-udp
      port: 29810
      protocol: UDP
      targetPort: 29810
    - name: 29811-udp
      port: 29811
      protocol: UDP
      targetPort: 29811
    - name: 29812-udp
      port: 29812
      protocol: UDP
      targetPort: 29812
    - name: 29813-udp
      port: 29813
      protocol: UDP
      targetPort: 29813
